--- a/website/templates/contacts.html
+++ b/website/templates/contacts.html
@@ -4,7 +4,7 @@
 
 <style>
     body {
-        background-image: url("{% get_media_prefix %}images/al5.jpg");
+        background-image: url("{% get_media_prefix %}images/abs.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
