Describe what you updated

--- a/services/templates/services/business_tech_school.html
+++ b/services/templates/services/business_tech_school.html
@@ -29,38 +29,66 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Complete Business Development Strategies</td>
-                                    <td>FCFA150,000</td>
-                                    <td>Douala, Cameroon</td>
-                                    <td>3 Months</td>
-                                    <td><a href="https://chat.whatsapp.com/H9hPV7fY9ko8tJR73kr4OO" target="_blank" class="btn btn-success">Enroll</a></td>
-                                </tr>
-                                <tr>
-                                    <td>Mindset Development And Transformation</td>
-                                    <td>FCFA100,000</td>
-                                    <td>Yaoundé, Cameroon</td>
-                                    <td>4 Months</td>
-                                    <td><a href="https://chat.whatsapp.com/H9hPV7fY9ko8tJR73kr4OO" target="_blank" class="btn btn-success">Enroll</a></td>
-                                </tr>
-                                <tr>
-                                    <td>Entrepreneurship</td>
-                                    <td>FCFA200,000</td>
-                                    <td>Yaoundé, Cameroon</td>
-                                    <td>4 Months</td>
-                                    <td><a href="https://chat.whatsapp.com/H9hPV7fY9ko8tJR73kr4OO" target="_blank" class="btn btn-success">Enroll</a></td>
-                                </tr>
-                                <tr>
-                                    <td>Cloud Architecture</td>
+                                    <td>ORACLE DATABASE SQL ASSOCIATE</td>
                                     <td>FCFA800,000</td>
-                                    <td>Limbe, Cameroon</td>
+                                    <td>Yaoundé, Cameroon</td>
                                     <td>6 Months</td>
-                                    <td><a href="https://chat.whatsapp.com/H9hPV7fY9ko8tJR73kr4OO" target="_blank" class="btn btn-success">Enroll</a></td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
                                 </tr>
+                                <tr>
+                                    <td>SOFTWARE TESTING</td>
+                                    <td>FCFA800,000</td>
+                                    <td>Yaoundé, Cameroon</td>
+                                    <td>6 Months</td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
+                                </tr>
+                                <tr>
+                                    <td>CYBER SECURITY</td>
+                                    <td>FCFA800,000</td>
+                                    <td>Yaoundé, Cameroon</td>
+                                    <td>6 Months</td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
+                                </tr>
+                                <tr>
+                                    <td>SOFTWARE DEVELOPMENT</td>
+                                    <td>FCFA500,000</td>
+                                    <td>Yaoundé, Cameroon</td>
+                                    <td>6 Months</td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
+                                </tr>
+                                <tr>
+                                    <td>APPLICATION DEVELOPMENT</td>
+                                    <td>FCFA500,000</td>
+                                    <td>Yaoundé, Cameroon</td>
+                                    <td>6 Months</td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
+                                </tr>
+                                <tr>
+                                    <td>ARTIFICIAL INTELLIGENCE</td>
+                                    <td>FCFA600,000</td>
+                                    <td>Yaoundé, Cameroon</td>
+                                    <td>6 Months</td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
+                                </tr>
+                                <tr>
+                                    <td>GRAPHIC DESIGN</td>
+                                    <td>FCFA300,000</td>
+                                    <td>Yaoundé, Cameroon</td>
+                                    <td>4 Months</td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
+                                </tr>
+                                <tr>
+                                    <td>DIGITAL MARKETING</td>
+                                    <td>FCFA400,000</td>
+                                    <td>Yaoundé, Cameroon</td>
+                                    <td>5 Months</td>
+                                    <td><a href="https://chat.whatsapp.com/FgrydlRpKJJ9o3lNGPWS9n" target="_blank" class="btn btn-success">Enroll</a></td>
+                                </tr>
+                                
                             </tbody>
                         </table>
-                    </div>
-                    
-                    <p class="mt-3">Join our training programs today and enhance your skills with MUBAKU Business/Tech School!</p>
+                    </div>  
+                    <p class="mt-3">Click on the enroll button to know more about our training programs.</p>
                 </div>
             </div>
         </div>
