--- a/services/templates/services/consultancy.html
+++ b/services/templates/services/consultancy.html
@@ -73,6 +73,7 @@
                 <li><strong>Accounting and Auditing:</strong> Our team provides comprehensive accounting and auditing services to keep your financial records in order.</li>
                 <li><strong>Staff Training:</strong> We offer professional training programs designed to enhance your team's skills in various areas of business management.</li>
                 <li><strong>Business Registration:</strong> We simplify the process of registering a business, from selecting the right business structure to filing the necessary paperwork.</li>
+                <li><strong>Credit Unions:</strong> we facilitate the creation process of credit unions (category 1, 2 and 3), and help in the setting up of these structures.</li>
             </ul>
         </div>
         <p>With years of experience, our consultants are equipped to guide you every step of the way, ensuring your business is built on a solid foundation.</p>
