--- a/services/templates/services/real_estate.html
+++ b/services/templates/services/real_estate.html
@@ -72,6 +72,7 @@
                 <li><strong>Project Management:</strong> We oversee every stage of your real estate project, from planning and construction to final delivery, ensuring timely and quality results.</li>
                 <li><strong>Property Advertisement:</strong> We advertise your properties through various channels, reaching potential buyers and tenants for quick and effective transactions.</li>
                 <li><strong>Buying/Selling Landed Properties:</strong> Whether you're buying or selling property, we assist with negotiations, paperwork, and market analysis to ensure the best deal.</li>
+                <li><strong>Provision Of A construction Software  :</strong> We also offer a building construction management software</li>
             </ul>
         </div>
         <p>Our experienced team of real estate professionals is here to guide you every step of the way, making sure you get the best outcomes in the ever-changing property market.</p>
