--- a/website/templates/funding.html
+++ b/website/templates/funding.html
@@ -4,7 +4,7 @@
 {% block content %}
 <style>
     body {
-        background-image: url("{% get_media_prefix %}images/abs.jpg");
+        background-image: url("{% get_media_prefix %}images/3.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -118,22 +118,18 @@
 
         <div class="funding-list">
             <div class="funding-item">
-                <h3>Startup Grants 2025</h3>
-                <p>Apply for up to <strong>$10,000</strong> in funding for your startup.</p>
-                <a href="https://example.com/startup-grants" target="_blank" class="btn-link">View Details</a>
+                <h3>Visa Accelerator Program 2025 for African Startups (Over $200,000 Value)</h3>
+                <p>This groundbreaking initiative connects Africa’s brightest minds with experienced mentors, <br>cutting-edge technology, </br>and unparalleled investment opportunities<strong><br>Deadline: March 15, 2025</br</strong></p>
+                <a href="https://africa.visa.com/visa-everywhere/innovation/visa-accelerator.html#1" target="_blank" class="btn-link">View Details</a>
             </div>
 
             <div class="funding-item">
-                <h3>Women in Business Fund</h3>
-                <p>Exclusive funding for <strong>female entrepreneurs</strong>.</p>
-                <a href="https://example.com/women-business-fund" target="_blank" class="btn-link">View Details</a>
+                <h3>Tony Elumelu Foundation (TEF) Entrepreneurship Programme 2025 For African Entrepreneurs (Up to $5000 Grant).</h3>
+                <p>Successful applicants will receive 12 weeks of intensive online training, access to a world-class mentor, and US$5,000 in seed capital to prove the concept, plus access to further funding.<br>Deadline: March 1, 2025</br></p>
+                <a href="https://climatestoryunit.org/apply/" target="_blank" class="btn-link">View Details</a>
             </div>
 
-            <div class="funding-item">
-                <h3>Youth Empowerment Grants</h3>
-                <p>Funding for <strong>young entrepreneurs under 30</strong>.</p>
-                <a href="https://example.com/youth-grants" target="_blank" class="btn-link">View Details</a>
-            </div>
+            
         </div>
     </div>
 </div>
