--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,7 +6,7 @@
     <style>
         /* Background styling */
         body {
-            background-image: url("{% get_media_prefix %}images/al5.jpg");
+            background-image: url("{% get_media_prefix %}images/3.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: repeat;
