--- a/website/templates/contacts.html
+++ b/website/templates/contacts.html
@@ -4,7 +4,7 @@
 
 <style>
     body {
-        background-image: url("{% get_media_prefix %}images/abs.jpg");
+        background-image: url("{% get_media_prefix %}images/3.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -88,7 +88,7 @@
     .contact-info i {
         font-size: 1.5rem;
         margin-right: 10px;
-        color: lightgreen;
+        color: gray;
     }
 
     .form-control {
@@ -105,7 +105,7 @@
 
     .btn-primary {
         font-weight: bold;
-        background-color: lightgreen;
+        background-color: gray;
         border: none;
         padding: 12px;
         width: 100%;
@@ -114,7 +114,7 @@
     }
 
     .btn-primary:hover {
-        background-color: lightgreen;
+        background-color: persian;
     }
 
     .social-media-icons {
