--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -122,7 +122,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 MUBAKU HOLDINGS. All Rights Reserved.</p>
+        <p>&copy; 2025 Mubaku High-Tech Incorporation. All Rights Reserved.</p>
     </footer>
 
     <!-- Bootstrap JS -->
